dev_ops/kubernetes/_clusters/server02/openwebui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
  labels:
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/instance: open-webui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: openwebui.server02.creutz.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  name: http
  tls:
    - hosts:
        - '*.server02.creutz.io'
      secretName: tls-server02-creutz-io
